name:                hTorrent
version:             0.0.0.0
synopsis:            A BitTorrent Client
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Ian Milligan
maintainer:          ianmllgn@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable hTorrent
    main-is: Main.hs
    default-extensions:
        RankNTypes,
        OverloadedStrings,
        TemplateHaskell,
        FlexibleContexts,
        TupleSections,
        NoImplicitPrelude,
        MultiParamTypeClasses,
        FlexibleInstances,
        FunctionalDependencies,
        DeriveDataTypeable,
        ViewPatterns
    build-depends:
        base >=4.6 && <4.7,
        lens >= 4.0 && < 4.1,
        cryptohash >=0.11 && <0.12,
        bytestring >=0.10 && <0.11,
        network >=2.4 && <2.5,
        parsec >=3.1 && <3.2,
        binary >=0.7 && <0.8,
        containers >=0.5 && <0.6,
        HTTP >=4000.2 && <4000.3,
        stm >=2.4 && <2.5,
        threepenny-gui >=0.4 && <0.5,
        attoparsec >=0.10 && <0.12,
        http-types >=0.8 && <0.9,
        monad-stm >=0.1 && <0.2,
        utf8-string >=0.3 && <0.4,
        array >=0.4 && <0.5,
        random >=1.0 && <1.1,
        monad-loops >=0.4 && <0.5,
        transformers >=0.3 && <0.4,
        conduit >=1.0 && <1.1,
        network-conduit >=1.0 && <1.1,
        attoparsec-conduit >=1.0 && <1.1,
        binary-conduit >=1.2 && <1.3,
        mtl >= 2.1 && < 2.2,
        classy-prelude >= 0.6 && < 0.8,
        explicit-exception >= 0.1 && < 0.2,
        mmorph >= 1.0 && < 1.1,
        mmap >= 0.5 && < 0.6,
        async >= 2.0 && < 2.1
    default-language: Haskell2010
